# optee-clearkey-cdmi

./: Android.mk  CMakeLists.txt
host/: Makefile  aes_crypto.c  aes_crypto.h  clearkey_platform.c  common.h  extern.c  extern.h  logging.h  main.c  test_all.c  test_all.h  test_helpers.c  test_helpers.h  tz_functions.c  tz_functions.h
ta/: Android.mk  Makefile  aes_crypto_ta.c  sub.mk
ta/include/: aes_crypto_ta.h
tests/: AesCtrDecryptorUnittest.cpp
